--- a/kerasNeuralFinder/BankChurnProject_knf.ipynb
+++ b/kerasNeuralFinder/BankChurnProject_knf.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,8 +87,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Running the KNF with static list of hidden layer combinations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,24 +113,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### New stuff!!!\n",
-    "\n",
-    "* Can provide different additional metrics (built-in only at the moment) like binary_accuracy\n",
-    "* Mean and the min/max based on the confidence interval provided by user are returned in results\n",
-    "* best_params_, best_result_, result_ values are returned with the instance.\n",
-    "\n",
-    "#### Roadmap\n",
-    "\n",
-    "* To be able to store weights for every run to have reproducible results\n",
-    "* To parallelize the looping using multiprocessing\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -141,12 +132,12 @@
      "text": [
       "Running model for next choice.....\n",
       "\n",
-      "Minimum loss until now 58.71\n",
-      "Maximum accuracy until now 66.25 %\n",
+      "Minimum loss until now 69.24\n",
+      "Maximum accuracy until now 50.36 %\n",
       "\n",
       "Previous run\n",
       "============\n",
-      "Choice 4/4..., epoch = 20, time_taken=4.43 seconds, loss=58.71, accuracy=66.25\n",
+      "Choice 4/4..., epoch = 20, time_taken=5.44 seconds, loss=69.38, accuracy=49.65\n",
       "\n",
       "Parameters are :\n",
       "================\n",
@@ -162,7 +153,7 @@
       "learning_rate = 0.01\n",
       "loss_functions = binary_crossentropy\n",
       "\n",
-      "Completed running ... overall time taken = 18.85\n"
+      "Completed running ... overall time taken = 21.86\n"
      ]
     }
    ],
@@ -829,6 +820,100 @@
    ],
    "source": [
     "knf.get_best_result(by={'loss':'low'}).T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running the KNF with a range of hidden layer combinations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "param_grid['hidden_layer_neurons'] ={1:(8, 11), 2:(6, 8)}\n",
+    "\n",
+    "This generates all possible combination of hidden layers as below \n",
+    "\n",
+    "* Max of 2 hidden layers\n",
+    "* 1st Layer with neuron count from 8 to 11\n",
+    "* 2nd Layer with neuron count from 6 to 8\n",
+    "\n",
+    "Ex: \n",
+    "    [8], [9], [10], [8, 6], [8,7],.....[11, 8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {}\n",
+    "param_grid['hidden_layer_neurons'] ={1:(8, 11), 2:(6, 8)}\n",
+    "param_grid['output_layer_neurons'] = [1]\n",
+    "param_grid['hidden_layer_activations'] = ['sigmoid', 'relu']\n",
+    "param_grid['output_layer_activations'] = ['sigmoid']\n",
+    "param_grid['kernel_inializers'] = ['glorot_normal']\n",
+    "param_grid['bias_initializers'] = ['glorot_normal']\n",
+    "param_grid['optimizers'] = [ 'Adam']\n",
+    "param_grid['epochs'] = [20]\n",
+    "param_grid['learning_rate'] = [0.01]\n",
+    "param_grid['loss_functions'] = ['binary_crossentropy']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knf2 = KerasNeuralFinder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running model for next choice.....\n",
+      "\n",
+      "Minimum loss until now 51.07\n",
+      "Maximum accuracy until now 78.01 %\n",
+      "\n",
+      "Previous run\n",
+      "============\n",
+      "Choice 32/32..., epoch = 20, time_taken=5.1 seconds, loss=56.44, accuracy=68.46\n",
+      "\n",
+      "Parameters are :\n",
+      "================\n",
+      "\n",
+      "hidden_layer_neurons = [11, 8]\n",
+      "output_layer_neurons = 1\n",
+      "hidden_layer_activations = relu\n",
+      "output_layer_activations = sigmoid\n",
+      "kernel_inializers = glorot_normal\n",
+      "bias_initializers = glorot_normal\n",
+      "optimizers = Adam\n",
+      "epochs = 20\n",
+      "learning_rate = 0.01\n",
+      "loss_functions = binary_crossentropy\n",
+      "\n",
+      "Completed running ... overall time taken = 173.57\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = knf2.fit(param_grid=param_grid,\n",
+    "                  X=X_train, y=y_train, fold=2,\n",
+    "                  confidence_interval=90,\n",
+    "                  metrics=['binary_accuracy', 'accuracy'])"
    ]
   },
   {
