--- a/CustomCNN/CNNCustom.ipynb
+++ b/CustomCNN/CNNCustom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,22 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(28, 28)"
+       "(30, 30)"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 490,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = np.random.rand(28,28)\n",
+    "data = np.random.rand(30,30)\n",
     "data.shape"
    ]
   },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(28, 28, 1)"
+       "(30, 30, 1)"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 492,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "(3, 3)"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 494,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,14 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 507,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process(data=None, filterArray=None, stride=1, process_name='conv', padding_size=0):\n",
+    "def process(data=None, filterArray=None, stride=1, process_name='conv', padding_size=0, pool_size=(0,0)):\n",
     "    \"\"\"\n",
+    "    \n",
     "    Method can be used to do \n",
     "        convolution based on filter provided\n",
+    "        Pad the data as required\n",
     "        max pooling\n",
     "        average pooling\n",
     "    \"\"\"\n",
@@ -133,16 +135,21 @@
     "    if padding_size>0:\n",
     "        print(f\"Adding padding\")\n",
     "        data = addPadding(data, padding_size=padding_size)\n",
-    "    \n",
-    "    filter_row_size = filterArray.shape[0]\n",
-    "    filter_col_size = filterArray.shape[1]\n",
-    "\n",
+    "     \n",
     "    max_rowIdx = data.shape[0]\n",
     "    max_colIdx = data.shape[1]\n",
+    "        \n",
+    "    if process_name=='conv':\n",
+    "        filter_row_size = filterArray.shape[0]\n",
+    "        filter_col_size = filterArray.shape[1]\n",
+    "        filter_shape = filterArray.shape\n",
+    "    elif process_name == 'max_pooling' or process_name == 'avg_pooling':\n",
+    "        filter_row_size = pool_size[0]\n",
+    "        filter_col_size = pool_size[1]\n",
     "\n",
     "    expected_outcome_row_size = (data.shape[0] - filter_row_size)/stride + 1\n",
     "    expected_outcome_col_size = (data.shape[1] - filter_col_size)/stride + 1\n",
-    "\n",
+    "    \n",
     "    if expected_outcome_row_size - np.fix(expected_outcome_row_size)>0.5:\n",
     "        expected_outcome_row_size = np.ceil(expected_outcome_row_size).astype(int)\n",
     "    else:\n",
@@ -156,7 +163,10 @@
     "    convoluted_values = []\n",
     "    \n",
     "    print(f\"Input data shape = {data.shape}\")\n",
-    "    print(f\"Filter size = {filterArray.shape}\")\n",
+    "    if process_name == 'conv':\n",
+    "        print(f\"Filter size = {filter_shape}\")\n",
+    "    else:\n",
+    "        print(f\"Pool size = {pool_size}\")\n",
     "    print(f\"Stride = {stride}\")\n",
     "    print(f\"Expected output size = ({expected_outcome_row_size}, {expected_outcome_col_size})\")\n",
     "    \n",
@@ -185,6 +195,7 @@
     "                    else:\n",
     "                        print(\"Unsupported operation\")\n",
     "                        return null\n",
+    "                    \n",
     "                    convoluted_values.append(convoluted_value)\n",
     "                    \n",
     "    convoluted_values = np.array(convoluted_values).reshape(expected_outcome_row_size, expected_outcome_col_size)\n",
@@ -193,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 508,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,26 +237,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 509,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input data shape = (28, 28, 1)\n",
+      "Input data shape = (30, 30, 1)\n",
       "Filter size = (3, 3)\n",
       "Stride = 1\n",
-      "Expected output size = (26, 26)\n"
+      "Expected output size = (28, 28)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(26, 26)"
+       "(28, 28)"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 509,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 510,
    "metadata": {},
    "outputs": [
     {
@@ -272,21 +283,21 @@
      "output_type": "stream",
      "text": [
       "Adding padding\n",
-      "Input data shape (28, 28, 1)\n",
-      "Padded data array shape (30, 30, 1)\n",
-      "Input data shape = (30, 30, 1)\n",
+      "Input data shape (30, 30, 1)\n",
+      "Padded data array shape (32, 32, 1)\n",
+      "Input data shape = (32, 32, 1)\n",
       "Filter size = (3, 3)\n",
       "Stride = 2\n",
-      "Expected output size = (14, 14)\n"
+      "Expected output size = (15, 15)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(14, 14)"
+       "(15, 15)"
       ]
      },
-     "execution_count": 397,
+     "execution_count": 510,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 511,
    "metadata": {},
    "outputs": [
     {
@@ -313,21 +324,21 @@
      "output_type": "stream",
      "text": [
       "Adding padding\n",
-      "Input data shape (28, 28, 1)\n",
-      "Padded data array shape (32, 32, 1)\n",
-      "Input data shape = (32, 32, 1)\n",
+      "Input data shape (30, 30, 1)\n",
+      "Padded data array shape (34, 34, 1)\n",
+      "Input data shape = (34, 34, 1)\n",
       "Filter size = (3, 3)\n",
       "Stride = 2\n",
-      "Expected output size = (15, 15)\n"
+      "Expected output size = (16, 16)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(15, 15)"
+       "(16, 16)"
       ]
      },
-     "execution_count": 398,
+     "execution_count": 511,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,32 +357,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 512,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input data shape = (28, 28, 1)\n",
-      "Filter size = (3, 3)\n",
+      "Input data shape = (30, 30, 1)\n",
+      "Pool size = (2, 2)\n",
       "Stride = 2\n",
-      "Expected output size = (13, 13)\n"
+      "Expected output size = (15, 15)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(13, 13)"
+       "(15, 15)"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 512,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conv = process(data=data, filterArray=filter_1, stride=2, process_name='max_pooling')\n",
+    "conv = process(data=data, pool_size=(2,2), stride=2, process_name='max_pooling')\n",
     "conv.shape"
    ]
   },
@@ -384,34 +395,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 506,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input data shape = (28, 28, 1)\n",
-      "Filter size = (3, 3)\n",
-      "Stride = 3\n",
-      "Expected output size = (9, 9)\n"
+      "Input data shape = (30, 30, 1)\n",
+      "Pool size = (2, 2)\n",
+      "Stride = 1\n",
+      "Expected output size = (29, 29)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(9, 9)"
+       "(29, 29)"
       ]
      },
-     "execution_count": 401,
+     "execution_count": 506,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conv = process(data=data, filterArray=filter_1, stride=3, process_name='avg_pooling')\n",
+    "conv = process(data=data,  stride=1, pool_size=(2,2), process_name='avg_pooling')\n",
     "conv.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -430,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
